--- a/assets/style.css
+++ b/assets/style.css
@@ -137,6 +137,8 @@ nav a {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	max-width: 450px;
+	max-height: 450px;
 	object-fit: cover;
 	padding: .5em;
 }
