--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+/* =========================================== */
+/* GENERAL */
+/* =========================================== */
+
 body {
 	max-width: 1920px;
 	margin: auto;
@@ -7,6 +11,21 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
+
+h1 {
+	font-size: 26px;
+	font-weight: bold;
+	margin: 0;
+}
+
+h2 {
+	font-size: 20px;
+	margin: 0;
+}
+
+/* =========================================== */
+/* HEADER */
+/* =========================================== */
 
 header {
 	background-color: white;
@@ -20,8 +39,28 @@ header {
 	align-items: center;
 }
 
-h1 {
-	font-size: 26px;
+.header-title {
+	display: flex;
+	flex-direction: row;
+	align-content: flex-start;
+	align-items: center;
+}
+
+.header-name {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+}
+
+.header-name img {
+	width: 40px;
+	margin-right: 15px;
+}
+
+.header-title h2 {
+	margin-left: 15px;
+	padding-top: 4px;
 }
 
 nav ul {
@@ -355,6 +394,20 @@ footer {
 
 
 @media all and (max-width: 1180px) {
+
+	/* =========================================== */
+	/* HEADER */
+	/* =========================================== */
+	.header-title {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.header-title h2 {
+		margin: 0;
+	}
+
 	.picture {
 		flex: 2;
 	}
@@ -441,10 +494,22 @@ footer {
 	}
 }
 
-@media all and (max-width: 650px) {
+@media all and (max-width: 850px) {
+
+	/* =========================================== */
+	/* HEADER */
+	/* =========================================== */
 	header {
 		flex-direction: column;
 		padding-inline: 0;
+	}
+
+	.header-title {
+		align-items: center;
+	}
+
+	.header-title h2 {
+		margin-bottom: 20px;
 	}
 
 	header .nav,
@@ -501,9 +566,10 @@ footer {
 		gap: 0;
 	}
 
-.address, .phone{
-	width:100%
-}
+	.address,
+	.phone {
+		width: 100%
+	}
 
 
 
