--- a/assets/style.css
+++ b/assets/style.css
@@ -63,6 +63,9 @@ header {
 	padding-top: 4px;
 }
 
+/* =========================================== */
+/* NAVBAR */
+/* =========================================== */
 nav ul {
 	display: flex;
 	list-style-type: none;
@@ -114,6 +117,9 @@ nav a {
 
 }
 
+/* =========================================== */
+/* ABOUT */
+/* =========================================== */
 #about-me {
 	flex: 2
 }
@@ -144,6 +150,10 @@ nav a {
 .gallery .nav {
 	justify-content: center;
 }
+
+/* =========================================== */
+/* CAROUSEL */
+/* =========================================== */
 
 #carouselExampleIndicators .carousel-control-next-icon,
 #carouselExampleIndicators .carousel-control-prev-icon {
@@ -188,6 +198,9 @@ nav a {
 
 }
 
+/* =========================================== */
+/* PORTFOLIO */
+/* =========================================== */
 .gallery-item {
 	position: absolute;
 	width: 100%;
@@ -210,6 +223,10 @@ nav a {
 	font-size: 24px;
 }
 
+/* =========================================== */
+/* QUOTE */
+/* =========================================== */
+
 .quote {
 	font-family: 'Spectral';
 	font-style: italic;
@@ -230,6 +247,10 @@ nav a {
 	font-weight: 800;
 	font-size: 22px;
 }
+
+/* =========================================== */
+/* SERVICES */
+/* =========================================== */
 
 #services {
 	margin: auto;
@@ -267,6 +288,9 @@ nav a {
 	z-index: 1;
 }
 
+/* =========================================== */
+/* CONTACT */
+/* =========================================== */
 #contact {
 	margin: auto;
 	background-color: #D8D3A8;
