--- a/assets/style.css
+++ b/assets/style.css
@@ -416,6 +416,13 @@ footer {
 	text-align: center;
 }
 
+/* =========================================== */
+/* MEDIA QUERIES FOR RESPONSIVE */
+/* =========================================== */
+
+/* =========================================== */
+/* LARGE DEVICES (MAX-WIDTH: 1180px) */
+/* =========================================== */
 
 @media all and (max-width: 1180px) {
 
@@ -432,6 +439,7 @@ footer {
 		margin: 0;
 	}
 
+	
 	.picture {
 		flex: 2;
 	}
@@ -452,6 +460,9 @@ footer {
 	}
 }
 
+/* =========================================== */
+/* MEDIUM DEVICES (MAX-WIDTH: 1000px) */
+/* =========================================== */
 @media all and (max-width: 1000px) {
 	#about {
 		flex-direction: column;
@@ -518,6 +529,9 @@ footer {
 	}
 }
 
+/* =========================================== */
+/* SMALL DEVICES (MAX-WIDTH: 850px) */
+/* =========================================== */
 @media all and (max-width: 850px) {
 
 	/* =========================================== */
@@ -594,9 +608,4 @@ footer {
 	.phone {
 		width: 100%
 	}
-
-
-
-
-
 }
