--- a/assets/style.css
+++ b/assets/style.css
@@ -116,7 +116,6 @@ nav a {
 .picture img {
 	width: 412px;
 	height: 412px;
-
 }
 
 /* =========================================== */
@@ -475,7 +474,7 @@ footer {
 	}
 
 	.picture {
-		width: 50%;
+		width: 80%;
 	}
 
 	.picture.left::before {
@@ -556,16 +555,17 @@ footer {
 		margin-bottom: 20px;
 	}
 
-	header .nav,
-	header .nav ul {
+	header nav,
+	header nav ul {
 		width: 100%;
 		padding: 0 0 0 0;
 	}
 
-	header .nav li {
+	header nav li {
 		flex: 1;
 		padding-block: 1em;
 		text-align: center;
+		padding: 0 !important;
 	}
 
 	.picture.left::before,
@@ -591,8 +591,18 @@ footer {
 		width: 100%;
 	}
 
-	.picture {
-		width: 80%;
+	.picture.left {
+		width: 100%;
+	}
+
+	.picture img {
+		width: 100%;
+		height:100%;
+	}
+
+	.picture.right img {
+		width: 100%;
+		height:100%;
 	}
 
 	/* =========================================== */
